# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
django_settings/: settings.py  urls.py
django_settings/django_settings/: settings.py
task_manager/: __init__.py  settings.py  settings.py.py  urls.py  views.py
task_manager/labels/: task_manager - Ярлык.lnk  urls.py  views.py
task_manager/statuses/: tests.py  urls.py  views.py
task_manager/tasks/: filters.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  home.html  index.html
task_manager/templates/general/: general_delete_confirm.html  general_form.html
task_manager/templates/label/: label_list.html
task_manager/templates/labels/: label_list.html
task_manager/templates/registration/: login.html
task_manager/templates/status/: status_list.html
task_manager/templates/statuses/: status_list.html
task_manager/templates/task/: task_list.html
task_manager/templates/tasks/: task_list.html
task_manager/templates/user/: user_list.html
task_manager/templates/users/: login.html
task_manager/tests/: conftest.py  test_10_session.py  test_filters.py  test_settings.py  test_statuses.py  test_tasks.py  test_user.py
task_manager/users/: models.py  test_user.py  urls.py  views.py
task_manager/users/fixtures/: user.json
task_manager/users/migrations/: 0001_initial.py  0002_add_test_users.py  0002_test_users.py  0082_test_users.py
tests/: __init__.py  conftest.py  test_10_session.py
