[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [{name = "HidTired", email = "Dentanyabonya@mail.ru"}]
readme = "README.md"
packages = [
  { include = "task_manager" },
]
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.3.0",
    "django==5.2",
    "django-bootstrap5>=25.1",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "load-dotenv>=0.1.0",
    "psycopg[binary]>=3.2.6",
    "python-dotenv>=1.1.0",
    "rollbar>=1.3.0",
    "uvicorn>=0.34.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "pytest-django>=4.11.1",
    "ruff>=0.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[tool:pytest]
DJANGO_SETTINGS_MODULE = task_manager.settings
addopts = 
    --tb=short
    -v
    --strict-markers
    --django-db=reset-state
    --base-url=http://webserver:9000
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
markers =
    playwright: mark a test as a playwright test